# lld-leasing

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  benchmark-native-default.csv  benchmark-native-dqlite-default.csv  benchmark-native-dqlite-no-reject.csv  benchmark-native-dqlite-notimeout.csv  benchmark-native-dqlite.csv  benchmark-native-no-reject.csv  benchmark-native-notimeout.csv  benchmark-native-sqlite-caching.csv  benchmark-native-sqlite-naive.csv  benchmark-native-sqlite.csv  benchmark-scone-default.csv  benchmark-scone-no-reject.csv  benchmark-scone-notimeout.csv  benchmark-scone-sqlite-default.csv  benchmark-scone-sqlite-no-reject.csv  benchmark-scone-sqlite-notimeout.csv  benchmark-scone-sqlite-optimized-default.csv  benchmark-scone-sqlite-optimized-no-reject.csv  benchmark-scone-sqlite-optimized-notimeout.csv  benchmark.csv  benchmark.py  benchmark.sh  build-all.sh  build.rs  create_image.sh  docker-compose-native-dqlite.yml  docker-compose-native-sqlite.yml  docker-compose-scone-dqlite.yml  docker-compose-scone-dqlite2.yml  docker-compose-scone-sqlite.yml  docker-compose.yml  dqlite-entrypoint-native.sh  dqlite-entrypoint-scone.sh  dqlite-entrypoint.sh  evaluate-phase1.csv  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json
attestation-benchmark/: benchmark-grouped.txt  output.csv
benchmark/attestation/: benchmark-grouped.txt  benchmark.csv  output.csv
benchmark/attestation2/: benchmark-grouped.txt  benchmark.csv  output.csv
benchmark/attestation3/: benchmark-grouped.txt
benchmark/native-dqlite/: benchmark-groubed.txt  benchmark.csv
benchmark/native-sqlite/: benchmark-grouped.txt  benchmark.csv
benchmark/scone-dqlite/: benchmark-groubed.txt  benchmark.csv
compose/: docker-compose-native-dqlite-naive.yml  docker-compose-native-dqlite.yml  docker-compose-native-sqlite-batching.yml  docker-compose-native-sqlite-caching.yml  docker-compose-native-sqlite-naive.yml  docker-compose-native-sqlite-optimized.yml  docker-compose-scone-dqlite.yml  docker-compose-scone-sqlite.yml
docker/: client.Dockerfile  dqlite.Dockerfile  native-dqlite.Dockerfile  scone-dqlite.Dockerfile  server-dqlite.Dockerfile  server-native-dqlite.Dockerfile  server-native-sqlite.Dockerfile  server-scone-dqlite.Dockerfile  server-scone-sqlite.Dockerfile  server-sqlite.Dockerfile  server.Dockerfile
lib/: Makefile  c_client.c  net.c
lib/include/: c_client.h  net.h  node_info.h  sqlite_protocol.h
lib/tmp/: sqlite3_if.c
lld-benchmark/: Cargo.toml
lld-benchmark-simple/: Cargo.toml
lld-benchmark-simple/src/: main.rs
lld-benchmark/src/: benchmark.rs  docker.rs  main.rs
lld-client/: .env  Cargo.toml
lld-client/src/: main.rs
lld-common/: Cargo.toml
lld-common/src/: errors.rs  lib.rs  utils.rs
lld-server/: Cargo.toml  build.rs
lld-server/src/: context.rs  context_batching.rs  context_naive.rs  database.rs  http_api.rs  main.rs  tcp_api.rs
lld-server/src/dqlite/: ffi.rs  mod.rs
lld-server/src/sqlite/: ffi.rs  mod.rs
src/: api.rs  cache.rs  context.rs  context_batching.rs  context_naive.rs  database.rs  env.rs  errors.rs  http_api.rs  lib.rs  main.rs  sqlite.rs  tcp_api.rs  utils.rs
src/dqlite/: ffi.rs  mod.rs
src/sqlite/: ffi.rs  mod.rs
