[package]
name = "lld-leasing"
version = "0.1.0"
edition = "2021"
authors = ["Lars Westermann <lars.westermann@tu-dresden.de>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.26"
clap = "3.0.0-beta.5"
rand = "0.8"
base64 = "0.13"
lazy_static = "1.4"
