[package]
name = "lld-benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lld-common = { path = "../lld-common" }

tokio = { version = "1", features = ["full"] }

clap = "2.34"
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"
