[package]
name = "lld-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
base64 = "0.13"
byteorder = "1.4"
clap = "2.34"
log = "0.4"

tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6"
openssl = "0.10"
reqwest = { version = "0.11", default-features=false, features = ["json", "native-tls"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
