[package]
name = "lld-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
lld-common = { path = "../lld-common" }

tokio = { version = "1", features = ["full"] }
warp = "0.3"

clap = "2.34"
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"

libc = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
