[package]
name = "lld-server"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[features]
dqlite = []

[dependencies]
lld-common = { path = "../lld-common" }

tokio = { version = "1", features = ["full"] }
warp = { version="0.3", default-features = false }

clap = "2.34"
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"

libc = "0.2"
