[package]
name = "lld-server"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[features]
dqlite = []

[dependencies]
lld-common = { path = "../lld-common" }

tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6"
openssl = "0.10"
warp = { version="0.3", default-features = false, features=["tls"] }

clap = { version = "3.1", features = ["derive", "env"] }
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"

libc = "0.2"
